# todo_fastapi

./: README.md  docker-compose.yaml  pyproject.toml
api_gateway/: main.py  test_main.http
api_gateway_microservice/api_gateway/: tests.py
membership_microservice/: .dockerignore  Dockerfile  pyproject.toml
membership_microservice/membership/: main.py
membership_microservice/membership/api/: router.py  schemas.py
membership_microservice/membership/api/endpoints/: get_membership.py  healthcheck.py
tasks/: Dockerfile  main.py  requirements.txt  schemas.py  test_main.http
tasks/api/: router.py
tasks/containers/: core.py
tasks/db/: tasks_repository.py
tasks/domain/: models.py
tasks/snippets/: publish_to_rabbitmq.py
tasks/tests/domain/: model_task.py
tasks_microservice/: pyproject.toml
tasks_microservice/tasks/: main.py
tasks_microservice/tasks/api/: router.py  schemas.py
tasks_microservice/tasks/api/endpoints/: create_task.py  healthcheck.py  update_task.py
tasks_microservice/tasks/containers/: core.py
tasks_microservice/tasks/db/: tasks_repository.py
tasks_microservice/tasks/domain/: exceptions.py  models.py  schemas.py
tasks_microservice/tasks/domain/interfaces/: repo_interfaces.py
tasks_microservice/tasks/snippets/: external_http_request.py  publish_to_rabbitmq.py
tasks_microservice/tasks/tests/: utils.py
users/: Dockerfile  main.py  requirements.txt
users/api/: endpoints.py
users/core/: config.py
users/persistent/: users_repository.py
users_microservice/: Dockerfile
users_microservice/users/: architecture_brainstorm.py
(+6 files in other folders)
