[tool.poetry]
name = "todo_backend"
version = "0.1.0"
description = "Some"
authors = ["volgoweb <volgoweb@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.27.1"
aiohttp = "3.8.1"
aio-pika = "8.0.3"
fastapi = "0.78.0"
httpio = "0.3.0"
icecream = "2.1.2"
poetry = "1.1.13"
redis = "4.3.1"
sqlalchemy = "1.4.36"
uvicorn = "0.17.6"
psycopg2 = "2.8"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
