[tool.poetry]
name = "todo_backend_membership"
version = "0.1.0"
description = "Some"
authors = ["volgoweb <volgoweb@bk.ru>"]

[tool.poetry.dependencies]
python = "3.9.13"
requests = "2.27.1"
aiohttp = "3.8.1"
aio-pika = "8.0.3"
fastapi = "0.78.0"
httpio = "0.3.0"
icecream = "2.1.2"
poetry = "1.1.13"
redis = "4.3.1"
sqlalchemy = "1.4.36"
uvicorn = "0.17.6"
# psycopg2 = "2.9.3"
celery = "<5.3"
dependency-injector = "<5.0"
pytest = "^7.1.2"
ipython = "^8.4.0"
mypy = "^0.961"
types-redis = "^4.2.7"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = "3.9.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
show_error_context = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = "--maxfail=1"
